--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="https://use.fontawesome.com/32584792a8.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"
+      integrity="sha256-hBMojZuWKocCflyaG8T19KBq9OlTlK39CTxb8AUWKhY=" crossorigin="anonymous"></script>
+
   </body>
 </html>
